; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_val_sigcrypt.c_ds_get_sigdata.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_val_sigcrypt.c_ds_get_sigdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ub_packed_rrset_key = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ub_packed_rrset_key*, i64, i32**, i64*)* @ds_get_sigdata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ds_get_sigdata(%struct.ub_packed_rrset_key* %0, i64 %1, i32** %2, i64* %3) #0 {
  %5 = alloca %struct.ub_packed_rrset_key*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store %struct.ub_packed_rrset_key* %0, %struct.ub_packed_rrset_key** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32** %2, i32*** %7, align 8
  store i64* %3, i64** %8, align 8
  %11 = load %struct.ub_packed_rrset_key*, %struct.ub_packed_rrset_key** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @rrset_get_rdata(%struct.ub_packed_rrset_key* %11, i64 %12, i32** %9, i64* %10)
  %14 = load i64, i64* %10, align 8
  %15 = icmp ult i64 %14, 7
  br i1 %15, label %16, label %19

16:                                               ; preds = %4
  %17 = load i32**, i32*** %7, align 8
  store i32* null, i32** %17, align 8
  %18 = load i64*, i64** %8, align 8
  store i64 0, i64* %18, align 8
  br label %28

19:                                               ; preds = %4
  %20 = load i32*, i32** %9, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 2
  %22 = getelementptr inbounds i32, i32* %21, i64 4
  %23 = load i32**, i32*** %7, align 8
  store i32* %22, i32** %23, align 8
  %24 = load i64, i64* %10, align 8
  %25 = sub i64 %24, 2
  %26 = sub i64 %25, 4
  %27 = load i64*, i64** %8, align 8
  store i64 %26, i64* %27, align 8
  br label %28

28:                                               ; preds = %19, %16
  ret void
}

declare dso_local i32 @rrset_get_rdata(%struct.ub_packed_rrset_key*, i64, i32**, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
